test_data/Xml/Unexpected/Unserializable/InvalidClassName/langStringNameType/wrong.xml.exception
Expected an element representing an instance of class LangStringNameType with element name langStringNameType, but got: utterlyInvalid at: the beginning